# sdfTools

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  setup.py
docs/: requirements.txt
docs/source/: conf.py  index.rst  mock_modules.py
docs/source/_sdf_tools/: __init__.py
docs/source/_sdf_tools/Grid/: __init__.py
docs/source/_sdf_tools/Sdf/: __init__.py
docs/source/_sdftools/Grid/: __init__.py
docs/source/_sdftools/Sdf/: __init__.py
docs/source/user/: grid.rst  installation.rst  sdf.rst  tutorials.rst
src/: CMakeLists.txt
src/bindings/: bindings.cpp  bindings.h  grid.cpp  sdf.cpp
src/core/: grid.cpp  grid.h  gridSdfOperations.cpp  gridSdfOperations.h  sdf.cpp  sdf.h  types.cpp  types.h  version.cpp.in  version.h
src/core/io/: write_bov.cpp  write_bov.h  write_sdf.cpp  write_sdf.h
src/core/sdf/: box.cpp  box.h  common.h  edges.cpp  edges.h  interface.cpp  interface.h  macros.h  operations.h  plate.cpp  plate.h  sdf_impl.h  segment.cpp  segment.h  sphere.cpp  sphere.h
src/core/utils/: error.h  file.h  helper_math.h
src/sdf/: __init__.py  version.py.in
src/sdf/bindings/: CMakeLists.txt  grid.cpp  sdf.cpp
src/sdf/core/: CMakeLists.txt  grid.cpp  grid.h
src/sdf/core/io/: CMakeLists.txt  write_bov.cpp  write_bov.h  write_sdf.cpp  write_sdf.h
src/sdf/core/sdf/: CMakeLists.txt  box.cpp  box.h  edges.cpp  edges.h  operations.h  plate.cpp  plate.h  sdf_impl.h  segment.cpp  segment.h  sphere.cpp  sphere.h
src/sdf/core/utils/: CMakeLists.txt  file.cpp  helper_math.h
src/sdf/sdf/: plate.h  sdf_impl.h  segment.cpp
src/sdf/utils/: helper_math.h
src/sdfTools/: __init__.py
src/sdf_tools/: CMakeLists.txt
src/sdf_tools/bindings/: CMakeLists.txt  bindings.cpp  bindings.h  grid.cpp  grid.h  sdf.cpp  sdf.h  types.cpp  types.h
src/sdf_tools/core/: CMakeLists.txt  apply_sdf.cpp  apply_sdf.h  grid.cpp  grid.h  types.h
src/sdf_tools/core/io/: CMakeLists.txt  bov.cpp  custom.cpp  grid.cpp  grid.h  vtk.cpp  vtk.h  write_bov.cpp  write_bov.h  write_sdf.cpp  write_sdf.h
src/sdf_tools/core/sdf/: CMakeLists.txt  api.h  box.cpp  box.h  capsule.cpp  capsule.h  composed.cpp  composed.h  edges.cpp  edges.h  from_mesh.cpp  from_mesh.h  interface.h  operations.h  piecewise_pipe.cpp  piecewise_pipe.h  plate.cpp  plate.h  sdf.h  sdf_impl.h  segment.cpp  segment.h  sphere.cpp  sphere.h  transformed.cpp  transformed.h
src/sdf_tools/core/utils/: CMakeLists.txt  error.cpp  error.h  file.cpp  file.h  helper_math.h  strprintf.cpp  strprintf.h
tests/: .gitignore  Makefile  run.sh  test_basic_sdfs.py  test_composed_sdfs.py  test_grid.py  test_io.py
tests/analytical/: 2d.py  box.py  plate.py  plates.py  segment.py  sphere.py  sphere_periodic.py
tests/edges/: triangle.py
tests/grid_operations/: extrude.py  flip.py  intersection.py  subtract.py  union.py
tests/io/: bov.py  sdf.py
tests/operations/: complement_periodic.py  intersection.py  subtract_grid.py  subtract_to_grid.py  union.py
tests/periodic_operations/: complement.py  intersection.py  subtract_grid.py  subtract_to_grid.py  union.py
tests/test_data/: bov.ref.io.bov.header.txt  bov.ref.io.bov.values.txt  grid.ref.analytical.2d.txt  grid.ref.analytical.box.txt  grid.ref.analytical.plate.txt  grid.ref.analytical.plates.txt  grid.ref.analytical.segment.txt  grid.ref.analytical.sphere.txt  grid.ref.analytical.sphere_periodic.txt  grid.ref.edges.triangle.txt  grid.ref.grid_operations.extrude.txt  grid.ref.grid_operations.flip.xyz.txt  grid.ref.grid_operations.flip.yxz.txt  grid.ref.grid_operations.flip.zxy.txt  grid.ref.grid_operations.subtract.txt  grid.ref.operations.complement_periodic.txt  grid.ref.operations.intersection.txt  grid.ref.operations.subtract_grid.txt  grid.ref.operations.union.txt  grid.ref.periodic_operations.intersection.txt  grid.ref.periodic_operations.subtract_grid.txt  grid.ref.periodic_operations.subtract_to_grid.txt  grid.ref.periodic_operations.union.txt  sdf.ref.io.sdf.header.txt
tests/tuto/: check.sh  cheese.py  prism.py  sphere.py  three.py  union.py
tutorial/: .gitignore  01_sphere.py  02_union.py  03_complex.py  04_cheese.py
